--- a/src/AmberEggApi.Infrastructure/AmberEggApi.Infrastructure.csproj
+++ b/src/AmberEggApi.Infrastructure/AmberEggApi.Infrastructure.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <ProjectGuid>{95FAC297-9C32-4E6E-8AA8-DB2BD7E2FA3C}</ProjectGuid>
   </PropertyGroup>
   
   <ItemGroup>
