--- a/src/Api.Common.Contracts/Api.Common.Contracts.csproj
+++ b/src/Api.Common.Contracts/Api.Common.Contracts.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <ProjectGuid>{F2EDD5AF-AE53-4F1A-A921-97E40E88413D}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
