--- a/src/Api.Common.Repository.Contracts.Core/Api.Common.Repository.csproj
+++ b/src/Api.Common.Repository.Contracts.Core/Api.Common.Repository.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <ProjectGuid>{5479439B-0A47-4184-92F6-3FF2D03EEF23}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
