--- a/src/Api.Common.Repository.MongoDb/Api.Common.Repository.MongoDb.csproj
+++ b/src/Api.Common.Repository.MongoDb/Api.Common.Repository.MongoDb.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <ProjectGuid>{986CD88A-ADC2-4FB5-A5D0-37B7791C17A7}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
