fix startup issue

--- a/src/AmberEggApi.WebApi/appsettings.json
+++ b/src/AmberEggApi.WebApi/appsettings.json
@@ -18,13 +18,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "LiterateConsole" },
-      {
-        "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341" }
-      }
+      { "Name": "LiterateConsole" }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
       "Application": "AmberEggApi.WebApi"
     }
