--- a/src/AmberEggApi.WebApi/appsettings.Local.json
+++ b/src/AmberEggApi.WebApi/appsettings.Local.json
@@ -18,11 +18,7 @@
       }
     },
     "WriteTo": [
-      { "Name": "LiterateConsole" },
-      {
-        "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341" }
-      }
+      { "Name": "LiterateConsole" }
     ],
     "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
     "Properties": {
