--- a/src/AmberEggApi.Domain.Tests/AmberEggApi.Domain.Tests.csproj
+++ b/src/AmberEggApi.Domain.Tests/AmberEggApi.Domain.Tests.csproj
@@ -21,6 +21,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="coverlet.msbuild" Version="2.8.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Mongo2Go" Version="2.2.12" />
