add test for validatemodelattribute

--- a/src/Api.Common.WebServer.Tests/Api.Common.WebServer.Tests.csproj
+++ b/src/Api.Common.WebServer.Tests/Api.Common.WebServer.Tests.csproj
@@ -19,8 +19,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Mongo2Go" Version="2.2.12" />
+    <PackageReference Include="Moq" Version="4.14.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit.Console" Version="3.11.1" />
@@ -33,12 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api.Common.Contracts\Api.Common.Contracts.csproj" />
-    <ProjectReference Include="..\Api.Common.Repository.MongoDb\Api.Common.Repository.MongoDb.csproj" />
-    <ProjectReference Include="..\AmberEggApi.ApplicationService\AmberEggApi.ApplicationService.csproj" />
-    <ProjectReference Include="..\AmberEggApi.Database\AmberEggApi.Database.csproj" />
-    <ProjectReference Include="..\AmberEggApi.Domain\AmberEggApi.Domain.csproj" />
-    <ProjectReference Include="..\AmberEggApi.Infrastructure\AmberEggApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Api.Common.WebServer\Api.Common.WebServer.csproj" />
   </ItemGroup>
 
 </Project>
