--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -5,6 +5,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
+  displayName: 'Set Assembly Manifest Data'
+- task: UseDotNet@2
+  inputs:
+    version: '2.2.x'
+    packageType: runtime
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
