--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'ubuntu-latest'
 
 variables:
   BuildConfiguration: 'Release'
@@ -12,15 +12,15 @@ variables:
 
 steps:
 
-- task: UseDotNet@2
-  inputs:
-    packageType: sdk
-    version: 2.2.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
-    includePreviewVersions: true
+# - task: UseDotNet@2
+#   inputs:
+#     packageType: sdk
+#     version: 2.2.x
+#     installationPath: $(Agent.ToolsDirectory)/dotnet
+#     includePreviewVersions: true
 
-- task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
-  displayName: 'Set Assembly Info Data'
+# - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
+#   displayName: 'Set Assembly Info Data'
 
 - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
   displayName: 'Prepare analysis on SonarCloud'
