--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -1,5 +1,5 @@
-trigger:
-- master
+# trigger:
+# - master
 
 pool:
   vmImage: 'windows-latest'
@@ -38,7 +38,7 @@ steps:
   displayName: Restore
   inputs:
     command: restore
-    projects: '$(Parameters.RestoreBuildProjects)'
+    # projects: '$(Parameters.RestoreBuildProjects)'
     # vstsFeed: 'e515f851-a794-40b2-a603-30214ed962ae/a86b4459-e784-456a-af3b-bd0dec42c1ce'
     verbosityRestore: Minimal
 
