Update azure-pipelines.yml for Azure Pipelines

--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
       echo $(Build.DefinitionName)
       echo $(Build.SourceBranchName)
       echo $(Build.BuildNumber)_$(Date:yyyy.MM.dd)$(Rev:.r)
-      echo $({{ Version.MajorMinor }})
+      echo $(variables.Version.MajorMinor)
       
 
 # - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
