--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -31,8 +31,7 @@ steps:
     CurrentFeatureMustNotBeBehindMaster: false
   env:
     SYSTEM_ACCESSTOKEN: $(System.AccessToken)
-  continueOnError: true
-  condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+  continueOnError: true  
       
 - task: Assembly-Info-NetCore@2
   inputs:
@@ -87,6 +86,25 @@ steps:
     command: test
     projects: $(Testprojects)
     arguments: '--configuration $(BuildConfiguration) --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
+
+- task: dependency-checker@1
+  inputs:
+    path: '$(Build.SourcesDirectory)'
+    searchRecursive: true
+    combineProjects: true
+    includePrerelease: false
+    useArtifacts: true
+    artifactsFeeds: 'e515f851-a794-40b2-a603-30214ed962ae/a86b4459-e784-456a-af3b-bd0dec42c1ce'
+    createBadge: false
+    createReport: true
+    reportPath: '$(Build.ArtifactStagingDirectory)\dependencies.html'
+
+- task: OWASPDependencyCheck@0
+  inputs:
+    outputDirectory: '$(Agent.TempDirectory)/dependency-scan-results'
+    scanDirectory: '$(Build.SourcesDirectory)'
+    outputFormat: 'ALL'
+    useSonarQubeIntegration: true
 
 - task: DeleteFiles@1
   displayName: 'Delete files from $(Build.ArtifactStagingDirectory)'
