--- a/src/pipelines/azure-pipelines.yml
+++ b/src/pipelines/azure-pipelines.yml
@@ -2,7 +2,7 @@
 # - master
 
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'windows-latest'
 
 variables:
   BuildConfiguration: 'Release'
@@ -10,29 +10,9 @@ variables:
   BuildProjects: '**/*.csproj'
   Testprojects: '**/*[Tt]ests/*.csproj'  
   Version.MajorMinor: 1.0
-  Version.Revision: $[counter(variables['Version.MajorMinor'], 0)]
-  
+  Version.Revision: $[counter(variables['Version.MajorMinor'], 0)]  
+
 steps:
-- task: GitflowBranchGate@1
-  displayName: 'Gitflow Branch Gate'
-  inputs:
-    developBranch: desenvolvimento
-    hotfixBranchLimit: 5
-    hotfixBranchDaysLimit: 30
-    releaseBranchLimit: 5
-    releaseBranchDaysLimit: 365
-    featureBranchLimit: 10
-    featureBranchDaysLimit: 90
-    hotfixBranchesMustNotHavePendingPullRequests: false
-    releaseBranchesMustNotHavePendingPullRequests: false
-    releaseMustNotBeBehindMaster: false
-    mustNotHaveHotfixAndReleaseBranches: false
-    featureBranchesMustNotBeBehindMaster: false
-    CurrentFeatureMustNotBeBehindMaster: false
-  env:
-    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
-  continueOnError: true  
-      
 - task: Assembly-Info-NetCore@2
   inputs:
     Path: '$(Build.SourcesDirectory)'
@@ -54,38 +34,38 @@ steps:
     FailOnWarning: false
     DisableTelemetry: false
 
-- task: SonarCloudPrepare@1
-  inputs:
-    SonarCloud: 'SonarCloud.AmberEggApi'
-    organization: 'diegosmorf'
-    scannerMode: 'MSBuild'
-    projectKey: 'AmberEggApi'
-    projectName: 'AmberEggApi'
-    extraProperties: |     
-     sonar.exclusions=**/obj/**,**/*.dll
-     sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
-     sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
+# - task: SonarCloudPrepare@1
+#   inputs:
+#     SonarCloud: 'SonarCloud.AmberEggApi'
+#     organization: 'diegosmorf'
+#     scannerMode: 'MSBuild'
+#     projectKey: 'AmberEggApi'
+#     projectName: 'AmberEggApi'
+#     extraProperties: |     
+#      sonar.exclusions=**/obj/**,**/*.dll
+#      sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
+#      sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'restore'
-    feedsToUse: 'select'
-    projects: $(BuildProjects)
-    vstsFeed: 'e515f851-a794-40b2-a603-30214ed962ae/a86b4459-e784-456a-af3b-bd0dec42c1ce'
-    verbosityRestore: 'Minimal'
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'restore'
+#     feedsToUse: 'select'
+#     projects: $(BuildProjects)
+#     vstsFeed: 'e515f851-a794-40b2-a603-30214ed962ae/a86b4459-e784-456a-af3b-bd0dec42c1ce'
+#     verbosityRestore: 'Minimal'
 
-- task: DotNetCoreCLI@2
-  displayName: Build
-  inputs:
-    projects: $(BuildProjects)
-    arguments: '--configuration $(BuildConfiguration) --no-restore'
+# - task: DotNetCoreCLI@2
+#   displayName: Build
+#   inputs:
+#     projects: $(BuildProjects)
+#     arguments: '--configuration $(BuildConfiguration) --no-restore'
 
-- task: DotNetCoreCLI@2
-  displayName: Test
-  inputs:
-    command: test
-    projects: $(Testprojects)
-    arguments: '--configuration $(BuildConfiguration) --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
+# - task: DotNetCoreCLI@2
+#   displayName: Test
+#   inputs:
+#     command: test
+#     projects: $(Testprojects)
+#     arguments: '--configuration $(BuildConfiguration) --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
 
 - task: dependency-checker@1
   inputs:
